# glideintelligence

./: .gitignore  check_article_content.py  content_generator_debug.py  docker-compose.prod.yml  generate_topic_analysis_job_debug.py  script_verify_template.py
backend/: .gitignore  Dockerfile  alembic.ini  assign_categories.py  check_active_jobs.py  check_admin_user.py  check_ai_jobs.py  check_ai_providers.py  check_analysis.py  check_analysis_details.py  check_analysis_state.py  check_audit_logs.py  check_category_configs.py  check_count.py  check_counts.py  check_db.py  check_failed.py  check_failed_topics.py  check_home_topics.py  check_job_payload.py  check_job_status.py  check_jobs.py  check_locks.py  check_pgvector.py  check_pipeline.py  check_pipeline_progress.py  check_pipeline_results.py  check_politics.py  check_processing_status.py  check_providers.py  check_recent_jobs.py  check_schema.py  check_specific_jobs.py  check_status.py  check_stuck_jobs.py  check_table_exists.py  check_tech_usage.py  check_topic_status.py  clean_for_fresh_start.py  cleanup_categories.py  (+125 more)
backend/app/: config.py  constants.py  database.py  main.py
backend/scripts/: audit_prompt_3_test.py  audit_prompt_4_test.py  audit_prompt_5_test.py  audit_schema.py  audit_schema_prompt_1.py  audit_schema_prompt_2.py  audit_statuses.py  check_admin_users.py  check_ai_providers.py  check_category_configs.py  check_cors.py  check_data.py  check_failed_topics.py  check_locks.py  check_providers.py  check_topic_categories.py  clean_pipeline_data.py  cleanup_content_db.py  cleanup_database.py  (+27 more)
(+171 files in other folders)
